Fixed the height of the map swf so it's visible while rendering

--- a/app/stylesheets/_maps.sass
+++ b/app/stylesheets/_maps.sass
@@ -81,3 +81,7 @@ input#map_title
     padding: 0
     cursor: pointer
     +opacity(0)
+
+#maps.show
+  #map_wrapper
+    height: 500px
